--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
   <header class="navbar">
     <div class="logo">
-      <img src="byte-logo.png" />
+      <img src="byte-loo.png" />
       <p>Traing & Placement center</p>
     </div>
     <div class="list">
@@ -323,3 +323,5 @@
 </body>
 
 </html>
+
+
